<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    tools:context=".OnboardingFragment2">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/iv_logo_bg" />

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/iv_illustration_onboarding_2"
        android:contentDescription="@string/illustration_desc"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/illustration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/onboarding_2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboarding_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/lorem_ipsum"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <Button
        style="@style/Widget.Material3.Button.Icon"
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboarding_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green_primary"
        app:iconSize="wrap_content"
        app:icon="@drawable/ic_navigate_next_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        android:paddingEnd="8dp"
        android:text="Next"
        android:textColor="@android:color/white"/>

</RelativeLayout>
