<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="30dp"
    android:background="@drawable/iv_background_gradient_light_green"
    tools:context=".ui.auth.resetpassword.ResetPasswordFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="114dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/iv_logo_text_bg" />

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/iv_illustration_auth"
        android:contentDescription="@string/illustration_desc"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/illustration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_title"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_forgot_password"
        android:layout_marginTop="16dp"
        android:background="@drawable/iv_rounded_button"
        android:text="Reset Password"
        android:textColor="@android:color/white"
        tools:ignore="HardcodedText" />

</RelativeLayout>