<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cust.detailTrip.DetailTripFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_fotoTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/txt_imagetrip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_namaTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Nama Trip"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_fotoTrip" />

        <TextView
            android:id="@+id/tv_hargaTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="Rp. 000.000"
            android:textColor="@color/green_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_fotoTrip" />

        <TextView
            android:id="@+id/tv_personTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="0/10"
            android:textColor="@color/green_primary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_hargaTrip"
            app:layout_constraintTop_toBottomOf="@+id/iv_fotoTrip" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="65dp"
            android:src="@drawable/ic_persons"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_fotoTrip" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_namaGunung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/green_primary"
            app:cardCornerRadius="5dp"
            app:layout_constraintStart_toStartOf="@+id/tv_namaTrip"
            app:layout_constraintTop_toBottomOf="@+id/tv_namaTrip">

            <TextView
                android:id="@+id/tv_namaGunung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:text="Gunung Rinjani" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:text="@string/loremipsum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_namaGunung" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_profilmitra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:strokeColor="#838383"
            app:strokeWidth="2sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_mitraTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/mitra_trip"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tv_fotoMitra"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_mitraTrip"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mitraTrip"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_namaMitra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-70dp"
                    android:text="Nama Mitra"
                    app:layout_constraintStart_toEndOf="@+id/tv_mitraTrip"
                    app:layout_constraintTop_toBottomOf="parent" />


                <TextView
                    android:id="@+id/tv_ratingSkor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="4.6/5"
                    android:textColor="@color/ratings_yellow"
                    app:layout_constraintStart_toEndOf="@+id/tv_fotoMitra"
                    app:layout_constraintTop_toBottomOf="@+id/tv_namaMitra" />

                <RatingBar
                    android:id="@+id/ic_ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-30dp"
                    android:layout_marginTop="1dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_namaMitra"
                    app:layout_constraintTop_toBottomOf="@+id/tv_namaMitra" />

                <Button
                    android:id="@+id/btn_profileMitra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/iv_rounded_button"
                    android:text="@string/profil"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>